Поменял год и название

--- a/HSP/Views/Shared/_Layout.cshtml
+++ b/HSP/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - HSP</p>
+            <p>&copy; 20181 - HSPortal</p>
         </footer>
     </div>
 
